
AUX_SOURCE_DIRECTORY(./src/E ENGINE_SRCS)
AUX_SOURCE_DIRECTORY(./src/GL ENGINE_SRCS)
AUX_SOURCE_DIRECTORY(./src/Shaders ENGINE_SRCS)
AUX_SOURCE_DIRECTORY(./src/Materials ENGINE_SRCS)
AUX_SOURCE_DIRECTORY(./src/Parsers ENGINE_SRCS)
AUX_SOURCE_DIRECTORY(./src/Strategies/Import ENGINE_SRCS)
AUX_SOURCE_DIRECTORY(./src/E/Light ENGINE_SRCS)
AUX_SOURCE_DIRECTORY(./src/Spacers ENGINE_SRCS)
AUX_SOURCE_DIRECTORY(./src ENGINE_SRCS)
set(LIB_NAME engine)
file(GLOB_RECURSE ENGINE_HEADER
    includes/*.h
    includes/*.hpp
)
add_library(${LIB_NAME} STATIC
    ${ENGINE_SRCS}
    ${ENGINE_HEADER}
)
target_link_libraries(${LIB_NAME} PRIVATE
    godison
    SOIL
    Qt${QT_VERSION_MAJOR}::Gui
    Qt${QT_VERSION_MAJOR}::OpenGL
    Qt${QT_VERSION_MAJOR}::OpenGLWidgets
)
target_include_directories(${LIB_NAME} PUBLIC includes)
