AUX_SOURCE_DIRECTORY(./DrawConfig WIDGETS_SRCS)
AUX_SOURCE_DIRECTORY(./CameraConfig WIDGETS_SRCS)
AUX_SOURCE_DIRECTORY(./TransformConfig WIDGETS_SRCS)
AUX_SOURCE_DIRECTORY(./MeshConfig WIDGETS_SRCS)
AUX_SOURCE_DIRECTORY(./Object3DConfig WIDGETS_SRCS)
AUX_SOURCE_DIRECTORY(./ WIDGETS_SRCS)

set(LIB_NAME widgets)
set(CMAKE_AUTOUIC_SEARCH_PATHS ./UI)
file(GLOB_RECURSE WIDGETS_HEADER
    includes/*.h
)
file(GLOB_RECURSE WIDGETS_UIS
    UI/*.ui
)
add_library(${LIB_NAME} SHARED
    ${WIDGETS_UIS}
    ${WIDGETS_SRCS}
    ${WIDGETS_HEADER}
)
target_link_libraries(${LIB_NAME} PRIVATE
    engine
    godison
    Qt${QT_VERSION_MAJOR}::Widgets
)
target_include_directories(${LIB_NAME} PUBLIC includes)
